--- a/hospital2/app/src/main/res/layout/activity_main.xml
+++ b/hospital2/app/src/main/res/layout/activity_main.xml
@@ -36,9 +36,9 @@
         android:text="Welcome to HNA Hospital"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textSize="25sp"
+        android:textSize="30sp"
         android:textColor="#1a2fb6"
-        android:fontFamily="cursive"/>
+        android:fontFamily="casual"/>
 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
