--- a/hospital2/app/src/main/res/layout/activity_data_of_new_patient.xml
+++ b/hospital2/app/src/main/res/layout/activity_data_of_new_patient.xml
@@ -86,4 +86,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20sp"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:textSize="20sp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="560dp"
+        android:id="@+id/back"/>
 </RelativeLayout>
