--- a/hospital2/app/src/main/res/layout/activity_main.xml
+++ b/hospital2/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:background="@drawable/isa"
+    style="@style/Base.DialogWindowTitleBackground.AppCompat"
     >
+
+
+
 
          <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/text1"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:textSize="25sp"
         android:id="@+id/edit1"
         android:ems="10"
+             android:gravity="center"
+             android:layout_marginTop="330dp"
+             android:background="@drawable/border"
+        android:backgroundTint="#a4f8f8fa"
         />
 
 
@@ -22,29 +31,38 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="430dp"
         android:text="@string/b1"
         android:textSize="25sp"
         android:gravity="center"
+        android:fontFamily="sans-serif"
         android:id="@+id/button1"
+        android:background="@drawable/border"
+        android:backgroundTint="#9c1990d1"
 
          />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Welcome to HNA Hospital"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:textSize="30sp"
-        android:textColor="#1a2fb6"
-        android:fontFamily="casual"/>
+
+        android:textColor="#040010"
+        />
 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Register"
     android:textSize="25sp"
-    android:layout_below="@id/button1"
+    android:textColor="#040010"
+    android:layout_marginTop="500dp"
+    android:fontFamily="sans-serif"
     android:id="@+id/button2"
+    android:background="@drawable/border"
+    android:backgroundTint="#9c1990d1"
     />
 </RelativeLayout>
